PAT fixed upstream
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14195 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,8 @@ linux-2.6 (2.6.31~rc8-1~experimental.1) UNRELEASED; urgency=low
     - IPv6: avoid wraparound for expired preferred lifetime
       (Closes: #518710)	
     - Fixes lockups with older dual-CPU machines (Closes: #542551)
+    - x86, pat: Allow ISA memory range uncacheable mapping requests
+      (Closes: #538159)	
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
