another bug closer
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14196 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,8 @@ linux-2.6 (2.6.31~rc8-1~experimental.1) UNRELEASED; urgency=low
     - Fixes lockups with older dual-CPU machines (Closes: #542551)
     - x86, pat: Allow ISA memory range uncacheable mapping requests
       (Closes: #538159)	
+    - drm/i915: Hook connector to encoder during load detection
+      (Closes: #522358)	
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
