* debian/changelog: Update. * debian/templates/image.plain.bug/control: Add Submit-As: linux-2.6.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14204 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -81,6 +81,8 @@ linux-2.6 (2.6.31~rc8-1~experimental.1) UNRELEASED; urgency=low
 
   [ Bastian Blank ]
   * Disable staging drivers by default.
+  * Force all bugs against images to be reported to linux-2.6.
+    (closes: #539176)
 
   [ Moritz Muehlenhoff ]
   * Fix Linus' name in copyright file (Closes: #530620)
