--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -21,6 +21,7 @@ linux-2.6 (2.6.31~rc8-1~experimental.1) UNRELEASED; urgency=low
       (Closes: #538159)	
     - drm/i915: Hook connector to encoder during load detection
       (Closes: #522358)	
+    - module: workaround duplicate section names (Closes: #545229)	
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
