--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -95,6 +95,7 @@ linux-2.6 (2.6.31~rc9-1~experimental.1) UNRELEASED; urgency=low
     used for experimental (trunk), oldstable and stable, but Vcs-*
     doesn't yet provide the ability to distinguish branches in a
     more fine-grained manner. (Closes: #471495)
+  * Update Standards-Version to 3.8.3, no changes needed
 
   [ dann frazier ]
   * n_tty: Fix echo race
