Note that bug #545981 was fixed upstream
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14214 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -23,6 +23,7 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
       (Closes: #522358)	
     - module: workaround duplicate section names (Closes: #545229)	
     - b43: Add fw capabilities (Closes: #533357)
+    - procfs: Fix idle time in uptime (Closes: #545981)
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
