--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -24,6 +24,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
     - module: workaround duplicate section names (Closes: #545229)	
     - b43: Add fw capabilities (Closes: #533357)
     - procfs: Fix idle time in uptime (Closes: #545981)
+    - e1000, e1000e, igb, ixgb, ixgbe: Fix initial link state
+      (Closes: #546041)
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
