another bug fixed in 2.6.31
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14217 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -26,7 +26,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
     - procfs: Fix idle time in uptime (Closes: #545981)
     - e1000, e1000e, igb, ixgb, ixgbe: Fix initial link state
       (Closes: #546041)
-    - CIFS: Handle port= mount option correctly (Closes: #524142)	
+    - CIFS: Handle port= mount option correctly (Closes: #524142)
+    - i915: Prevent screen flickering in X11 (Closes: #545377)	
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
