--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -54,6 +54,7 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * Newer Standards-Version 3.8.2 without changes.
   * Allow install in chroot without do_initrd check for piuparts.
   * Cleanup Maintainer scripts from ancient pre linux-2.6 assumptions.
+    (Also closes: #536333)	
   * Disable DEVKMEM.
   * [ppc, sparc] Enable EFI_PARTITION. (closes: #540486)
   * Disable old USB_DEVICE_CLASS. (Closes: #510279)
