--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -86,7 +86,7 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
     platforms have been converted to GPIOLIB.
   * [armel/orion5x, armel/kirkwood] Disable MARVELL_PHY since it may
-    lead to conflicts with the build-in Ethernet.
+    lead to conflicts with the built-in Ethernet.
 
   [ Bastian Blank ]
   * Disable staging drivers by default.
