x86: Fix crash in text_poke_early() on 486-class processors (Closes: #515982)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14223 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -81,6 +81,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * rt{2860,2870,3070}sta: Use existing CCITT CRC implementation on
     firmware rather than adding an equivalent variant of ITU-T CRC
   * rd: Build as a module since we do not require initrd support
+  * x86: Fix crash in text_poke_early() on 486-class processors
+    (Closes: #515982)
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
