intel-agp: Fix cache flushing on i8xx chipsets, avoiding graphics corruption and GPU lock-ups (Closes: #541307)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14225 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -83,6 +83,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * rd: Build as a module since we do not require initrd support
   * x86: Fix crash in text_poke_early() on 486-class processors
     (Closes: #515982)
+  * intel-agp: Fix cache flushing on i8xx chipsets, avoiding graphics
+    corruption and GPU lock-ups (Closes: #541307)
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
