--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -85,6 +85,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
     (Closes: #515982)
   * intel-agp: Fix cache flushing on i8xx chipsets, avoiding graphics
     corruption and GPU lock-ups (Closes: #541307)
+  * Generate architecture-qualified package relations as needed for
+    flavours that exist for multiple architectures (Closes: #278729)
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
