--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -109,6 +109,7 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
     doesn't yet provide the ability to distinguish branches in a
     more fine-grained manner. (Closes: #471495)
   * Update Standards-Version to 3.8.3, no changes needed
+  * Disable PROM console support (Closes: #525958)	
 
   [ dann frazier ]
   * n_tty: Fix echo race
