--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -93,6 +93,9 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
     platforms have been converted to GPIOLIB.
   * [armel/orion5x, armel/kirkwood] Disable MARVELL_PHY since it may
     lead to conflicts with the built-in Ethernet.
+  * Add features from 2.6.32:
+    - crypto: mv_cesa - Add support for Orion5X crypto engine
+  * [armel/orion5x] Enable CRYPTO_DEV_MV_CESA.
 
   [ Bastian Blank ]
   * Disable staging drivers by default.
