--- a/linux-modules-nonfree-2.6/debian/changelog
+++ b/linux-modules-nonfree-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-modules-nonfree-2.6 (2.6.30-2) UNRELEASED; urgency=low
+
+  * Updating kernel version to 2.6.30-2.
+
+ -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 11:55:16 +0200
+
 linux-modules-nonfree-2.6 (2.6.30-1) unstable; urgency=low
 
   * Updating kernel version to 2.6.30-1.
