--- a/linux-modules-nonfree-2.6/debian/changelog
+++ b/linux-modules-nonfree-2.6/debian/changelog
@@ -1,6 +1,8 @@
 linux-modules-nonfree-2.6 (2.6.30-2) UNRELEASED; urgency=low
 
   * Updating kernel version to 2.6.30-2.
+  * Updating package to debhelper 7.
+  * Updating package to standards 3.8.3.
 
  -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 11:55:16 +0200
 
