--- a/linux-modules-nonfree-2.6/debian/changelog
+++ b/linux-modules-nonfree-2.6/debian/changelog
@@ -6,6 +6,7 @@ linux-modules-nonfree-2.6 (2.6.30-2) UNRELEASED; urgency=low
   * Rewriting copyright file in machine-interpretable format.
   * Removing nvidia stubs, giving up on their maintainers to ever
     cooperate so that we have it integrated.
+  * Removing myself from uploaders.
 
  -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 11:55:16 +0200
 
