--- a/linux-modules-nonfree-2.6/debian/changelog
+++ b/linux-modules-nonfree-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-modules-nonfree-2.6 (2.6.30-2) UNRELEASED; urgency=low
+linux-modules-nonfree-2.6 (2.6.30-2) unstable; urgency=low
 
   * Updating kernel version to 2.6.30-2.
   * Updating package to debhelper 7.
@@ -8,7 +8,7 @@ linux-modules-nonfree-2.6 (2.6.30-2) UNRELEASED; urgency=low
     cooperate so that we have it integrated.
   * Removing myself from uploaders.
 
- -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 11:55:16 +0200
+ -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 12:20:58 +0200
 
 linux-modules-nonfree-2.6 (2.6.30-1) unstable; urgency=low
 
