--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-modules-extra-2.6 (2.6.30-4) UNRELEASED; urgency=low
+
+  * Updating kernel version to 2.6.30-2.
+
+ -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 12:23:49 +0200
+
 linux-modules-extra-2.6 (2.6.30-3) unstable; urgency=low
 
   * Removing drbd8, no maintainer support anymore (see #539219).
