--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-modules-extra-2.6 (2.6.30-4) UNRELEASED; urgency=low
 
   * Updating kernel version to 2.6.30-2.
+  * Updating package to debhelper 7.
 
  -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 12:23:49 +0200
 
