Removing defines for unused modules.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14264 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-modules-extra-2.6 (2.6.30-4) UNRELEASED; urgency=low
   * Updating package to debhelper 7.
   * Updating package to standards 3.8.3.
   * Rewriting copyright file in machine-interpretable format.
+  * Removing defines for unused modules.
 
  -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 12:23:49 +0200
 
