--- a/linux-modules-extra-2.6/debian/changelog
+++ b/linux-modules-extra-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-modules-extra-2.6 (2.6.30-4) UNRELEASED; urgency=low
+linux-modules-extra-2.6 (2.6.30-4) unstable; urgency=low
 
   * Updating kernel version to 2.6.30-2.
   * Updating package to debhelper 7.
@@ -7,7 +7,7 @@ linux-modules-extra-2.6 (2.6.30-4) UNRELEASED; urgency=low
   * Removing defines for unused modules.
   * Removing myself from uploaders.
 
- -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 12:23:49 +0200
+ -- Daniel Baumann <daniel@debian.org>  Sun, 20 Sep 2009 12:58:39 +0200
 
 linux-modules-extra-2.6 (2.6.30-3) unstable; urgency=low
 
