--- a/linux-modules-contrib-2.6/debian/changelog
+++ b/linux-modules-contrib-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-modules-contrib-2.6 (2.6.30-1) UNRELEASED; urgency=low
   * Removing rt73, driver was rewritten in 2.6.30 mainline.
   * Syncing open-vm copyright file.
   * Updating kernel version to 2.6.30-2.
+  * Updating package to debhelper 7.
 
  -- Daniel Baumann <daniel@debian.org>  Mon, 15 Jun 2009 10:22:00 +0200
 
