--- a/linux-modules-contrib-2.6/debian/changelog
+++ b/linux-modules-contrib-2.6/debian/changelog
@@ -6,6 +6,7 @@ linux-modules-contrib-2.6 (2.6.30-1) UNRELEASED; urgency=low
   * Updating kernel version to 2.6.30-2.
   * Updating package to debhelper 7.
   * Updating package to standards 3.8.3.
+  * Rewriting copyright file in machine-interpretable format.
 
  -- Daniel Baumann <daniel@debian.org>  Mon, 15 Jun 2009 10:22:00 +0200
 
