Turn off EARLY_PRINTK on IP22 to make the system boot
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14284 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -96,6 +96,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * Add features from 2.6.32:
     - crypto: mv_cesa - Add support for Orion5X crypto engine
   * [armel/orion5x] Enable CRYPTO_DEV_MV_CESA.
+  * Disable SYS_HAS_EARLY_PRINTK on SGI IP22 to work around a hang
+    during bootup (Closes: #507557)
 
   [ Bastian Blank ]
   * Disable staging drivers by default.
