--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -59,6 +59,7 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * [ppc, sparc] Enable EFI_PARTITION. (closes: #540486)
   * Disable old USB_DEVICE_CLASS. (Closes: #510279)
   * Drop yaird initramfs generator support.
+  * Add stable release 2.6.31.1.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
