* debian/changelog: Update. * debian/config/arm: Remove. * debian/config/armel/config.footbridge,   debian/config/armel/config.iop32x,   debian/config/armel/config.ixp4xx,   debian/config/armel/config.orion5x,   debian/config/armel/config.versatile: Add. * debian/config/armel/defines: Remove config file location overrides. * debian/config/defines: Remove arm architecture.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14295 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -123,6 +123,9 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
     CONFIG_KEXEC from being enabled
   * [hppa] Disable CONFIG_AB3100_CORE, it fails to build
 
+  [ Bastian Blank ]
+  * [arm] Remove old arm architecture.
+
  -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
 
 linux-2.6 (2.6.30-6) unstable; urgency=high
