topconfig enable PREEMPT_VOLUNTARY
everyone ships it and enables it.
the !preempt pathes seem the buggy these days.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14296 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -60,6 +60,7 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * Disable old USB_DEVICE_CLASS. (Closes: #510279)
   * Drop yaird initramfs generator support.
   * Add stable release 2.6.31.1.
+  * Enable PREEMPT_VOLUNTARY.
 
   [ Ben Hutchings ]
   * mga: remove unnecessary change from firmware-loading patch
