--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -100,6 +100,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   * [armel/orion5x] Enable CRYPTO_DEV_MV_CESA.
   * Disable SYS_HAS_EARLY_PRINTK on SGI IP22 to work around a hang
     during bootup (Closes: #507557)
+  * [armel] Enable BPQETHER (on the request of Iain Young) and some
+    other AX25 drivers.
 
   [ Bastian Blank ]
   * Disable staging drivers by default.
