--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -130,6 +130,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
     - CVE-2009-3002 (2.6.31)
     - CVE-2009-3001 (2.6.31)
     - CVE-2009-2844 (2.6.31)
+    - CVE-2009-2695 (2.6.31)
+    - CVE-2009-2691 (2.6.31)
    
   [ dann frazier ]
   * n_tty: Fix echo race
