Note that bug #539215 was fixed upstream
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14315 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -28,6 +28,8 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
       (Closes: #546041)
     - CIFS: Handle port= mount option correctly (Closes: #524142)
     - i915: Prevent screen flickering in X11 (Closes: #545377)	
+    - hppa: Ensure broadcast tlb purge runs single threaded
+      (Closes: #539215)
 
   [ maximilian attems ]
   * [powerpc64] Enable modular RTC_DRV_PS3, PS3_VRAM.
