--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
 
   * New upstream release.
     - Support for W83627DHG-P (closes: #535646).
@@ -144,7 +144,7 @@ linux-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * [arm] Remove old arm architecture.
 
- -- maximilian attems <maks@debian.org>  Thu, 18 Jun 2009 23:50:56 +0200
+ -- maximilian attems <maks@debian.org>  Sun, 04 Oct 2009 18:42:54 +0200
 
 linux-2.6 (2.6.30-6) unstable; urgency=high
 
