Prompt bug reporters to run the kernel version they're reporting on or otherwise record boot messages
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14322 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -91,6 +91,8 @@ linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
     corruption and GPU lock-ups (Closes: #541307)
   * Generate architecture-qualified package relations as needed for
     flavours that exist for multiple architectures (Closes: #278729)
+  * Prompt bug reporters to run the kernel version they're reporting on
+    or otherwise record boot messages
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
