--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,11 @@
+linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * Prompt bug reporters to run the kernel version they're reporting on
+    or otherwise record boot messages
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 18:02:39 +0100
+
 linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
 
   * New upstream release.
@@ -91,8 +99,6 @@ linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
     corruption and GPU lock-ups (Closes: #541307)
   * Generate architecture-qualified package relations as needed for
     flavours that exist for multiple architectures (Closes: #278729)
-  * Prompt bug reporters to run the kernel version they're reporting on
-    or otherwise record boot messages
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
