--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,8 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * Prompt bug reporters to run the kernel version they're reporting on
     or otherwise record boot messages
+  * Include PCI device list in bug reports even if the running kernel
+    doesn't match
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 18:02:39 +0100
 
