--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,13 +1,3 @@
-linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
-
-  [ Ben Hutchings ]
-  * Prompt bug reporters to run the kernel version they're reporting on
-    or otherwise record boot messages
-  * Include PCI device list in bug reports even if the running kernel
-    doesn't match
-
- -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 18:02:39 +0100
-
 linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
 
   * New upstream release.
@@ -101,6 +91,10 @@ linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
     corruption and GPU lock-ups (Closes: #541307)
   * Generate architecture-qualified package relations as needed for
     flavours that exist for multiple architectures (Closes: #278729)
+  * Prompt bug reporters to run the kernel version they're reporting on
+    or otherwise record boot messages
+  * Include PCI device list in bug reports even if the running kernel
+    doesn't match
 
   [ Martin Michlmayr ]
   * [armel/orion5x, armel/kirkwood] Set GPIO_SYSFS=y since these
@@ -119,6 +113,8 @@ linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
   * Disable staging drivers by default.
   * Force all bugs against images to be reported to linux-2.6.
     (closes: #539176)
+  * [arm] Remove old arm architecture.
+  * Use kernel architecture for libc-dev build.
 
   [ Moritz Muehlenhoff ]
   * Fix Linus' name in copyright file (Closes: #530620)
@@ -151,10 +147,7 @@ linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
     CONFIG_KEXEC from being enabled
   * [hppa] Disable CONFIG_AB3100_CORE, it fails to build
 
-  [ Bastian Blank ]
-  * [arm] Remove old arm architecture.
-
- -- maximilian attems <maks@debian.org>  Sun, 04 Oct 2009 18:42:54 +0200
+ -- maximilian attems <maks@debian.org>  Sun, 04 Oct 2009 20:27:05 +0200
 
 linux-2.6 (2.6.30-6) unstable; urgency=high
 
