Include model information in bug reports
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14327 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * Include model information in bug reports
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 19:48:35 +0100
+
 linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
 
   * New upstream release.
