--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,6 +6,8 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
     - Firmware package status
     - Network configuration and status (optional)
     - USB device list
+  * nfs: Avoid overrun when copying client IP address string
+    (Closes: #549002)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 19:48:35 +0100
 
