--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,6 +8,7 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
     - USB device list
   * nfs: Avoid overrun when copying client IP address string
     (Closes: #549002)
+  * Add support for DEB_BUILD_OPTIONS=parallel=N (Closes: #458560)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 19:48:35 +0100
 
