--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -11,7 +11,7 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   * Add support for DEB_BUILD_OPTIONS=parallel=N (Closes: #458560)
 
   [ maximilian attems ]
-  * Add stable release 2.6.31.2.
+  * Add stable release 2.6.31.2 (Closes: #522828)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 19:48:35 +0100
 
