--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -9,6 +9,7 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   * nfs: Avoid overrun when copying client IP address string
     (Closes: #549002)
   * Add support for DEB_BUILD_OPTIONS=parallel=N (Closes: #458560)
+  * sfc: Fix initial link state
 
   [ maximilian attems ]
   * Add stable release 2.6.31.2 (Closes: #522828)
