--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,9 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
     (Closes: #549002)
   * Add support for DEB_BUILD_OPTIONS=parallel=N (Closes: #458560)
   * sfc: Fix initial link state
+  * Improve package descriptions
+    - Clarify the differences between i386 flavours (Closes: #414690)
+    - Simplify wording of the description template
 
   [ maximilian attems ]
   * Add stable release 2.6.31.2 (Closes: #522828)
