--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,9 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   [ maximilian attems ]
   * Add stable release 2.6.31.2 (Closes: #522828)
 
+  [ dann frazier ]
+  * [sparc] build zImage by default, fixes build
+
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 19:48:35 +0100
 
 linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
