--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -13,6 +13,7 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   * Improve package descriptions
     - Clarify the differences between i386 flavours (Closes: #414690)
     - Simplify wording of the description template
+  * Add stable release 2.6.31.3
 
   [ maximilian attems ]
   * Add stable release 2.6.31.2 (Closes: #522828)
