--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,8 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
     - Clarify the differences between i386 flavours (Closes: #414690)
     - Simplify wording of the description template
   * Add stable release 2.6.31.3
+  * Remove /usr/include/scsi from linux-libc-dev; these headers are
+    provided by libc6-dev (Closes: #550130)
 
   [ maximilian attems ]
   * Add stable release 2.6.31.2 (Closes: #522828)
