--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,7 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   * Add stable release 2.6.31.3
   * Remove /usr/include/scsi from linux-libc-dev; these headers are
     provided by libc6-dev (Closes: #550130)
+  * Remove dummy dot-files from linux-libc-dev
 
   [ maximilian attems ]
   * Add stable release 2.6.31.2 (Closes: #522828)
