--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -23,6 +23,7 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
 
   [ dann frazier ]
   * [sparc] build zImage by default, fixes build
+  * [ia64] Fix call to elilo in postinst
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 19:48:35 +0100
 
