--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,7 +19,8 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   * Remove dummy dot-files from linux-libc-dev
 
   [ maximilian attems ]
-  * Add stable release 2.6.31.2 (Closes: #522828)
+  * Add stable release 2.6.31.2
+    - PM / yenta: Fix cardbus suspend/resume regression (Closes: #522828)
 
   [ dann frazier ]
   * [sparc] build zImage by default, fixes build
