hfsplus: Refuse to mount volumes larger than 2TB, which may otherwise be corrupted (Closes: #550010)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14373 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,8 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   * Remove /usr/include/scsi from linux-libc-dev; these headers are
     provided by libc6-dev (Closes: #550130)
   * Remove dummy dot-files from linux-libc-dev
+  * hfsplus: Refuse to mount volumes larger than 2TB, which may otherwise
+    be corrupted (Closes: #550010)
 
   [ maximilian attems ]
   * Add stable release 2.6.31.2
