Add stable release 2.6.31.4
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14377 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,11 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   * Remove dummy dot-files from linux-libc-dev
   * hfsplus: Refuse to mount volumes larger than 2TB, which may otherwise
     be corrupted (Closes: #550010)
+  * Add stable release 2.6.31.4
+    - x86: Don't leak 64-bit kernel register values to 32-bit processes
+      (CVE-2009-2910)
+    - appletalk: Fix skb leak when ipddp interface is not loaded
+      (CVE-2009-2903)
 
   [ maximilian attems ]
   * Add stable release 2.6.31.2
