--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (2.6.31-1~experimental.2) experimental; urgency=low
 
   [ Ben Hutchings ]
   * Include more information in bug reports:
@@ -34,7 +34,7 @@ linux-2.6 (2.6.31-1~experimental.2) UNRELEASED; urgency=low
   * [sparc] build zImage by default, fixes build
   * [ia64] Fix call to elilo in postinst
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Oct 2009 19:48:35 +0100
+ -- maximilian attems <maks@debian.org>  Mon, 12 Oct 2009 23:54:52 +0200
 
 linux-2.6 (2.6.31-1~experimental.1) experimental; urgency=low
 
