--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,9 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
   * Include aufs2, marked as staging (Closes: #541828)
   * Include speakup modules under staging
 
+  [ Martin Michlmayr ]
+  * CPUidle: always return with interrupts enabled.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 13 Oct 2009 02:18:40 +0100
 
 linux-2.6 (2.6.31-1~experimental.2) experimental; urgency=low
