--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,6 +6,9 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
 
   [ Martin Michlmayr ]
   * CPUidle: always return with interrupts enabled.
+  * [armel/orion5x, armel/kirkwood] Enable FB since some Kirkwood
+    machines have a VGA chip (e.g. OpenRD-Client) and because it's
+    possible to use a DisplayLink USB virtual graphics adapter.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 13 Oct 2009 02:18:40 +0100
 
