--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-kbuild-2.6 (2.6.31~rc4-1) UNRELEASED; urgency=low
+linux-kbuild-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream version.
 
