--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,6 +1,10 @@
 linux-kbuild-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
 
+  [ Bastian Blank ]
   * New upstream version.
+
+  [ Ben Hutchings ]
+  * Include new script gcc-x86_32-has-stack-protector.sh.
 
  -- Bastian Blank <waldi@debian.org>  Sat, 25 Jul 2009 11:46:23 +0200
 
