--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-kbuild-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
+linux-kbuild-2.6 (2.6.31.2-1~experimental.1) UNRELEASED; urgency=low
 
   [ Bastian Blank ]
   * New upstream version.
@@ -6,6 +6,7 @@ linux-kbuild-2.6 (2.6.31-1~experimental.1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * Include new script gcc-x86_32-has-stack-protector.sh.
   * Add myself to Uploaders.
+  * New upstream version (2.6.31.2).
 
  -- Bastian Blank <waldi@debian.org>  Sat, 25 Jul 2009 11:46:23 +0200
 
