--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-kbuild-2.6 (2.6.31.2-1~experimental.1) UNRELEASED; urgency=low
+linux-kbuild-2.6 (2.6.31.2-1~experimental.1) experimental; urgency=low
 
   [ Bastian Blank ]
   * New upstream version.
@@ -8,7 +8,7 @@ linux-kbuild-2.6 (2.6.31.2-1~experimental.1) UNRELEASED; urgency=low
   * Add myself to Uploaders.
   * New upstream version (2.6.31.2).
 
- -- Bastian Blank <waldi@debian.org>  Sat, 25 Jul 2009 11:46:23 +0200
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 17 Oct 2009 23:05:27 +0100
 
 linux-kbuild-2.6 (2.6.30-1) unstable; urgency=low
 
