[alpha] Disable SND_MIXART, causes gcc ICE.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14409 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,10 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
     machines have a VGA chip (e.g. OpenRD-Client) and because it's
     possible to use a DisplayLink USB virtual graphics adapter.
 
+  [ maximilian attems ]
+  * [alpha] Disable SND_MIXART, causes gcc ICE.
+
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 13 Oct 2009 02:18:40 +0100
 
 linux-2.6 (2.6.31-1~experimental.2) experimental; urgency=low
