--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -13,6 +13,7 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
   [ maximilian attems ]
   * [alpha] Disable SND_MIXART, causes gcc ICE.
   * [x86] Enable modular X86_MCE_INJECT.
+  * [x86_64] Set LOG_BUF_SHIFT to 2^18.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 13 Oct 2009 02:18:40 +0100
 
