topconfig: Set LSM_MMAP_MIN_ADDR to zero to unbreak dosemu and 16-bit Wine.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14416 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,7 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
   * [alpha] Disable SND_MIXART, causes gcc ICE.
   * [x86] Enable modular X86_MCE_INJECT.
   * [x86_64] Set LOG_BUF_SHIFT to 2^18.
+  * Set LSM_MMAP_MIN_ADDR to zero to unbreak dosemu and 16-bit Wine.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 13 Oct 2009 02:18:40 +0100
 
