--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,7 +14,8 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
   * [alpha] Disable SND_MIXART, causes gcc ICE.
   * [x86] Enable modular X86_MCE_INJECT.
   * [x86_64] Set LOG_BUF_SHIFT to 2^18.
-  * Set LSM_MMAP_MIN_ADDR to zero to unbreak dosemu and 16-bit Wine.
+  * [x86_32] Set LSM_MMAP_MIN_ADDR to zero to unbreak dosemu and 16-bit Wine,
+    ia64 and x86_64 to 65536 otherwise default to 32768.
   * Unset UEVENT_HELPER_PATH to save some boot cycles.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 13 Oct 2009 02:18:40 +0100
