Add stable release 2.6.31.5
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14422 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,7 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * Include aufs2, marked as staging (Closes: #541828)
   * Include speakup modules under staging
+  * Add stable release 2.6.31.5
 
   [ Martin Michlmayr ]
   * CPUidle: always return with interrupts enabled.
