--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
   * Include aufs2, marked as staging (Closes: #541828)
   * Include speakup modules under staging
   * Add stable release 2.6.31.5
+  * [x86_64] Enable NUMA_EMU (Closes: #541389)
 
   [ Martin Michlmayr ]
   * CPUidle: always return with interrupts enabled.
