--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-kbuild-2.6 (2.6.31.2-1) unstable; urgency=low
+
+  * Upload to unstable.
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 25 Oct 2009 18:38:44 +0000
+
 linux-kbuild-2.6 (2.6.31.2-1~experimental.1) experimental; urgency=low
 
   [ Bastian Blank ]
