--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.31-1~experimental.3a~test) UNRELEASED; urgency=low
+
+  * Testing patches /dev/null
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 26 Oct 2009 00:56:08 +0000
+
 linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
