README.Debian: Add brief information about building specific binary packages (Closes: #546182)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14461 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,9 +1,3 @@
-linux-2.6 (2.6.31-1~experimental.3a~test) UNRELEASED; urgency=low
-
-  * Testing patches /dev/null
-
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 26 Oct 2009 00:56:08 +0000
-
 linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
@@ -11,6 +5,8 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
   * Include speakup modules under staging
   * Add stable release 2.6.31.5
   * [x86_64] Enable NUMA_EMU (Closes: #541389)
+  * README.Debian: Add brief information about building specific binary
+    packages (Closes: #546182)
 
   [ Martin Michlmayr ]
   * CPUidle: always return with interrupts enabled.
