Update to 2.6.32-rc5.
Incorporate 2.6.31-1 changelog from sid.
Move my last changelog addition into the new entry.
Remove obsolete patches.
Update aufs2, firmware and speakup patches.
Update reportoldconfig and version patches.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14463 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,12 +1,18 @@
-linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
+linux-2.6 (2.6.32~rc5-1) UNRELEASED; urgency=low
+
+  * New upstream release candidate.
+  * README.Debian: Add brief information about building specific binary
+    packages (Closes: #546182)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 26 Oct 2009 01:18:26 +0000
+
+linux-2.6 (2.6.31-1) unstable; urgency=low
 
   [ Ben Hutchings ]
   * Include aufs2, marked as staging (Closes: #541828)
   * Include speakup modules under staging
   * Add stable release 2.6.31.5
   * [x86_64] Enable NUMA_EMU (Closes: #541389)
-  * README.Debian: Add brief information about building specific binary
-    packages (Closes: #546182)
 
   [ Martin Michlmayr ]
   * CPUidle: always return with interrupts enabled.
@@ -21,7 +27,11 @@ linux-2.6 (2.6.31-1~experimental.3) UNRELEASED; urgency=low
     ia64 and x86_64 to 65536 otherwise default to 32768.
   * Unset UEVENT_HELPER_PATH to save some boot cycles.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 13 Oct 2009 02:18:40 +0100
+  [ Bastian Blank ]
+  * Set ABI to 1.
+  * Enable Apple PMU battery. (closes: #544264)
+
+ -- Bastian Blank <waldi@debian.org>  Sat, 24 Oct 2009 19:17:30 +0200
 
 linux-2.6 (2.6.31-1~experimental.2) experimental; urgency=low
 
