--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -1,3 +1,9 @@
+tgt (1:0.9.10-1) UNRELEASED; urgency=low
+
+  * New upstream version
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 15 Nov 2009 10:45:07 +0000
+
 tgt (20070924-1) unstable; urgency=low
 
   [ Frederik Schüler ]
