--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -1,6 +1,7 @@
 tgt (1:0.9.10-1) UNRELEASED; urgency=low
 
   * New upstream version
+  * Add myself to Uploaders
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 15 Nov 2009 10:45:07 +0000
 
