--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -1,7 +1,9 @@
 tgt (1:0.9.10-1) UNRELEASED; urgency=low
 
   * New upstream version
+    - Adds -D_GNU_SOURCE to compiler options (Closes: #526562)
   * Add myself to Uploaders
+  * Fix syntax of usage messages (Closes: #493375)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 15 Nov 2009 10:45:07 +0000
 
