--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -4,6 +4,7 @@ tgt (1:0.9.10-1) UNRELEASED; urgency=low
     - Adds -D_GNU_SOURCE to compiler options (Closes: #526562)
   * Add myself to Uploaders
   * Fix syntax of usage messages (Closes: #493375)
+  * Use GPL-compatible digest code instead of OpenSSL (Closes: #556294)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 15 Nov 2009 10:45:07 +0000
 
