--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -7,6 +7,7 @@ tgt (1:0.9.10-1) UNRELEASED; urgency=low
   * Use GPL-compatible digest code instead of OpenSSL (Closes: #556294)
   * Update Standards-Version to 3.8.3
     - Add Homepage field
+  * Enable FCoE driver
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 15 Nov 2009 10:45:07 +0000
 
