--- a/tgt/debian/changelog
+++ b/tgt/debian/changelog
@@ -8,6 +8,10 @@ tgt (1:0.9.10-1) UNRELEASED; urgency=low
   * Update Standards-Version to 3.8.3
     - Add Homepage field
   * Enable FCoE driver
+  * Update package description
+    - Fix grammar
+    - Mention 'SCSI' in the short description
+    - Update list of drivers
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 15 Nov 2009 10:45:07 +0000
 
