* debian/changelog: Update. * debian/config: Enable WATCHDOG and SOFT_WATCHDOG.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14727 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,7 @@ linux-2.6 (2.6.32-1) UNRELEASED; urgency=low
   * Move contents of linux-support package to /usr/share.
   * Make linux-patch package depend against python.
   * Use python-support instead of python-central.
+  * Always enable software watchdog support.
   
   [ Ben Hutchings ]
   * Re-enable accidentally omitted drivers, thanks to Uwe Kleine-König
