* debian/changelog: Update. * debian/config: Centralize USB mass storage support options.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14730 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,6 +18,7 @@ linux-2.6 (2.6.32-1) UNRELEASED; urgency=low
   * Make linux-patch package depend against python.
   * Use python-support instead of python-central.
   * Always enable software watchdog support.
+  * Always enable complete USB mass storage support.
   
   [ Ben Hutchings ]
   * Re-enable accidentally omitted drivers, thanks to Uwe Kleine-König
