* debian/changelog: Update. * debian/config/kernelarch-x86/config: Set AGP and AGP_AMD64 to module. * debian/config/kernelarch-x86/config-arch-32,   debian/config/kernelarch-x86/config-arch-64: Remove duplicated options.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14733 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -20,6 +20,7 @@ linux-2.6 (2.6.32-1) UNRELEASED; urgency=low
   * Always enable software watchdog support.
   * Always enable complete USB mass storage support.
   * [amd64, powerpc, sparc] Build USB support as module.
+  * [amd64] Build AGP support as module.
   
   [ Ben Hutchings ]
   * Re-enable accidentally omitted drivers, thanks to Uwe Kleine-König
