--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -22,6 +22,7 @@ linux-2.6 (2.6.32-1) UNRELEASED; urgency=low
   * [amd64, powerpc, sparc] Build USB support as module.
   * [amd64] Build AGP support as module.
   * Always enable dummy net driver support.
+  * Drop linux-tree package, it have no users left.
   
   [ Ben Hutchings ]
   * Re-enable accidentally omitted drivers, thanks to Uwe Kleine-König
