aufs2: Update to snapshot from 2009-11-29
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14739 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -41,6 +41,7 @@ linux-2.6 (2.6.32-1) UNRELEASED; urgency=low
     case they are also buggy
   * usbnet: Set link down initially for drivers that update link state
     (Closes: #444043)
+  * aufs2: Update to snapshot from 2009-11-29
 
   [ dann frazier ]
   * mac80211 (CVE-2009-4026, CVE-2009-4027):
