--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -42,6 +42,7 @@ linux-2.6 (2.6.32-1) UNRELEASED; urgency=low
   * usbnet: Set link down initially for drivers that update link state
     (Closes: #444043)
   * aufs2: Update to snapshot from 2009-11-29
+  * i915: Enable auto-loading even though CONFIG_DRM_I915_KMS is not set
 
   [ dann frazier ]
   * mac80211 (CVE-2009-4026, CVE-2009-4027):
