--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-1) UNRELEASED; urgency=low
+linux-2.6 (2.6.32-1) unstable; urgency=low
 
   * New upstream release candidate:
   - Fixes wifi with rt73usb (Closes: #555640)
@@ -49,7 +49,7 @@ linux-2.6 (2.6.32-1) UNRELEASED; urgency=low
     - fix two remote exploits
     - fix spurious delBA handling
 
- -- Martin Michlmayr <tbm@cyrius.com>  Sun, 22 Nov 2009 13:56:12 +0000
+ -- Bastian Blank <waldi@debian.org>  Sun, 06 Dec 2009 18:17:39 +0100
 
 linux-2.6 (2.6.32~rc8-1~experimental.1) unstable; urgency=low
 
