--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
+
+  * Allow memory hot-add and -remove if possible.
+
+ -- Bastian Blank <waldi@debian.org>  Sun, 06 Dec 2009 20:42:14 +0100
+
 linux-2.6 (2.6.32-1) unstable; urgency=low
 
   * New upstream release candidate:
