--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,7 +1,11 @@
 linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
 
+  [ Bastian Blank ]
   * Allow memory hot-add and -remove if possible.
   * Enable USB suspend.
+
+  [ Moritz Muehlenhoff ]
+  * Disable cryptoloop (Closes: #559755)
 
  -- Bastian Blank <waldi@debian.org>  Sun, 06 Dec 2009 20:42:14 +0100
 
