--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,9 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
   [ Moritz Muehlenhoff ]
   * Disable cryptoloop (Closes: #559755)
   * Initial work on a README.source file as suggested by current policy
+  
+  [ Ben Hutchings ]
+  * aufs2: Update to snapshot from 2009-12-05
 	
  -- Bastian Blank <waldi@debian.org>  Sun, 06 Dec 2009 20:42:14 +0100
 
