--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,6 +1,6 @@
-linux-kbuild-2.6 (2.6.32~rc8-1~experimental.1) UNRELEASED; urgency=low
+linux-kbuild-2.6 (2.6.32-1) UNRELEASED; urgency=low
 
-  * New upstream release candidate.
+  * New upstream version. (closes: #560090)
   * Include new script module-common.lds, thanks to Zoran Dzelajlija.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 02 Dec 2009 21:40:48 +0000
