--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,7 +1,11 @@
 linux-kbuild-2.6 (2.6.32-1) UNRELEASED; urgency=low
 
+  [ Ben Hutchings ]
   * New upstream version. (closes: #560090)
   * Include new script module-common.lds, thanks to Zoran Dzelajlija.
+
+  [ Bastian Blank ]
+  * Move contents of linux-kbuild package to /usr/lib.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 02 Dec 2009 21:40:48 +0000
 
