--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,7 +10,9 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
   
   [ Ben Hutchings ]
   * aufs2: Update to snapshot from 2009-12-05
-	
+  * postinst: Fix failure paths in check for missing firmware
+    (Closes: #560263)
+
  -- Bastian Blank <waldi@debian.org>  Sun, 06 Dec 2009 20:42:14 +0100
 
 linux-2.6 (2.6.32-1) unstable; urgency=low
