--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,6 +12,7 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
   * aufs2: Update to snapshot from 2009-12-05
   * postinst: Fix failure paths in check for missing firmware
     (Closes: #560263)
+  * atl1c: Fix system hang when link drops (Closes: #559577)
 
  -- Bastian Blank <waldi@debian.org>  Sun, 06 Dec 2009 20:42:14 +0100
 
