--- a/linux-2.6/debian/README
+++ b/linux-2.6/debian/README
@@ -1,30 +1,7 @@
-Migrating to the common kernel-image package
--------------------------------------------- 
-Files for architecture <arch> should be placed into arch/<arch>. This
-directory normally contains a common config file for this architecture
-('config'), flavour-specific config files, Makefile.inc file,
-controlling the build for this arch, and the defines file, containing
-the machine descriptions for various flavours.  For arches with
-subarches the subdirectory arch/<arch>/<subarch> with the same file
-structure must be created for each subarch.
-
 Kernel config files
 -------------------
-Configuration files are constructed dynamically by concatenating a number
-of config files as described below. 
-
-For architecture without subarches:
-
-  arch/config
-  arch/<arch>/config 
-  arch/<arch>/config.<flavour>
-  
-For architecture with subarches:
-
-  arch/config
-  arch/<arch>/config
-  arch/<arch>/<subarch>/config
-  arch/<arch>/<subarch>/config.<flavour>
+Configuration files are constructed dynamically from a number of config
+files, as listed in debian/config/<arch>/defines.
 
 Control file
 ------------
@@ -32,7 +9,7 @@ The master control file debian/control must be generated before
 the package is uploaded. debian/rules contains the debian/control 
 target, which generates the control file by invoking the 
 debian/bin/gencontrol.py script, which combines the templates from
-the templates directory and arch/subarch specific defines file to
+the templates directory and architecture-specific defines file to
 produce the debian/control file. Note that this target is intentionally
 made to fail with a non-zero exit code to make sure that it is never
 run during an automatic build. The following variables are substituted
@@ -41,7 +18,6 @@ into the templates:
 @version@      Upstream kernel version, for example 2.6.11.
 @major@        The major version, for example 2.6
 @arch@         The Debian arch name, such as powerpc or i386.
-@subarch@      The subarch - only used by powerpc right now.
 @flavour@      The build flavour, such as 686 or k7-smp.
 @class@        The CPU/architecture class; displayed in synopsis.  It should
                be fairly short, as the synopsis is supposed to be <80 chars.
@@ -56,18 +32,3 @@ into the templates:
 
 Normally, the arch-specific contents should be controlled by
 adjusting the corresponding defines file.
-
-Makefile.inc
-------------
-Each architecture subdirectory in arch may contain a Makefile.inc
-file, which is included by debian/rules after definining all the
-variables. It may be used to override the standard variables on
-per-architecture basis and other evil things. So far the valid uses of
-this file include the setting of the following variables:
-
-image_postproc
-
-  A command to be run after the kernel image is built. As far as I know,
-  it only required on sparc for stripping of the kernel which is too big
-  to be booted otherwise. Typical use is too ugly to be presented here.
-
