--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-kbuild-2.6 (2.6.32-1) UNRELEASED; urgency=low
+linux-kbuild-2.6 (2.6.32-1) unstable; urgency=low
 
   [ Ben Hutchings ]
   * New upstream version. (closes: #560090)
@@ -7,7 +7,7 @@ linux-kbuild-2.6 (2.6.32-1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Move contents of linux-kbuild package to /usr/lib.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Wed, 02 Dec 2009 21:40:48 +0000
+ -- Bastian Blank <waldi@debian.org>  Fri, 11 Dec 2009 16:16:12 +0100
 
 linux-kbuild-2.6 (2.6.31.2-1) unstable; urgency=low
 
