--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,7 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Allow memory hot-add and -remove if possible.
   * Enable USB suspend.
+  * Enable kernel samepage merging. (closes: #558200)
 
   [ Moritz Muehlenhoff ]
   * Disable cryptoloop (Closes: #559755)
