* debian/changelog: Update. * debian/config/s390/config: Enable SECCOMP.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14778 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
   * Allow memory hot-add and -remove if possible.
   * Enable USB suspend.
   * Enable kernel samepage merging. (closes: #558200)
+  * [s390] Enable SECCOMP.
 
   [ Moritz Muehlenhoff ]
   * Disable cryptoloop (Closes: #559755)
