--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,7 +4,9 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
   * Allow memory hot-add and -remove if possible.
   * Enable USB suspend.
   * Enable kernel samepage merging. (closes: #558200)
-  * [s390] Enable SECCOMP.
+  * [s390]
+    - Enable SECCOMP.
+    - Enable z/VM Watchdog Timer.
 
   [ Moritz Muehlenhoff ]
   * Disable cryptoloop (Closes: #559755)
