--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -18,7 +18,10 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
     (Closes: #560263)
   * atl1c: Fix system hang when link drops (Closes: #559577)
 
- -- Bastian Blank <waldi@debian.org>  Sun, 06 Dec 2009 20:42:14 +0100
+  [ Aurelien Jarno ]
+  * Add support for the sparc64 architecture.
+
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 13 Dec 2009 13:25:45 +0100
 
 linux-2.6 (2.6.32-1) unstable; urgency=low
 
