netfilter: xtables: fix conntrack match v1 ipt-save output (Closes: #556587)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14785 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,8 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
   * postinst: Fix failure paths in check for missing firmware
     (Closes: #560263)
   * atl1c: Fix system hang when link drops (Closes: #559577)
+  * netfilter: xtables: fix conntrack match v1 ipt-save output
+    (Closes: #556587)
 
   [ Aurelien Jarno ]
   * Add support for the sparc64 architecture.
