--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
+linux-2.6 (2.6.32-2) UNRELEASED; urgency=high
 
   [ Bastian Blank ]
   * Allow memory hot-add and -remove if possible.
@@ -25,6 +25,9 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=low
 
   [ dann frazier ]
   * Add stable release 2.6.32.1:
+    - ext4: Fix double-free of blocks with EXT4_IOC_MOVE_EXT (CVE-2009-4306)
+    - ext4: avoid divide by zero when trying to mount a corrupted file system
+      (CVE-2009-4307)
     - ext4: Fix insufficient checks in EXT4_IOC_MOVE_EXT (CVE-2009-4131)
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 13 Dec 2009 13:25:45 +0100
