Prepare to release (2.6.32-2).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14790 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.32-2) UNRELEASED; urgency=high
+linux-2.6 (2.6.32-2) unstable; urgency=high
 
   [ Bastian Blank ]
   * Allow memory hot-add and -remove if possible.
@@ -30,7 +30,7 @@ linux-2.6 (2.6.32-2) UNRELEASED; urgency=high
       (CVE-2009-4307)
     - ext4: Fix insufficient checks in EXT4_IOC_MOVE_EXT (CVE-2009-4131)
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 13 Dec 2009 13:25:45 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 16 Dec 2009 21:42:49 +0000
 
 linux-2.6 (2.6.32-1) unstable; urgency=low
 
