--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,11 @@
+linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
+
+  [ Martin Michlmayr ]
+  * [armel/orion5x] Build MTD_CFI_AMDSTD into the kernel again since
+    it's needed on the D-Link DNS-323 (thanks Manuel Roeder).
+
+ -- Martin Michlmayr <tbm@cyrius.com>  Fri, 18 Dec 2009 15:34:01 +0000
+
 linux-2.6 (2.6.32-2) unstable; urgency=high
 
   [ Bastian Blank ]
