* Input: ALPS - add support for touchpads with 4-directional button * Input: ALPS - add interleaved protocol support (Dell E6x00 series)   (Closes: #561589)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14799 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,11 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
   * [armel/orion5x] Build MTD_CFI_AMDSTD into the kernel again since
     it's needed on the D-Link DNS-323 (thanks Manuel Roeder).
 
+  [ dann frazier ]
+  * Input: ALPS - add support for touchpads with 4-directional button
+  * Input: ALPS - add interleaved protocol support (Dell E6x00 series)
+    (Closes: #561589)
+
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 18 Dec 2009 15:34:01 +0000
 
 linux-2.6 (2.6.32-2) unstable; urgency=high
