ia64: Include <linux/personality.h> header in <asm/fcntl.h>; fixes FTBFS
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14802 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,8 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
   * Add stable release 2.6.32.2:
     - KVM: x86 emulator: limit instructions to 15 bytes (CVE-2009-4031)
     - hfs: fix a potential buffer overflow (CVE-2009-4020)
+  * ia64: Include <linux/personality.h> header in <asm/fcntl.h>; fixes
+    FTBFS
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 18 Dec 2009 15:34:01 +0000
 
