Re-enable vserver
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14807 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -9,6 +9,7 @@ linux-2.6 (2.6.32-3) UNRELEASED; urgency=high
   * Input: ALPS - add support for touchpads with 4-directional button
   * Input: ALPS - add interleaved protocol support (Dell E6x00 series)
     (Closes: #561589)
+  * Re-enable vserver
 
   [ Ben Hutchings ]
   * sfc: Apply changes from 2.6.33-rc1 adding support for SFC9000 family
