topconfig set modular BT_MRVL and BT_MRVL_SDIO
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14823 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,7 +5,7 @@ linux-2.6 (2.6.32-4) UNRELEASED; urgency=low
     in maintainer scripts (Closes: #558077)
 
   [ maximilian attems ]
-  * topconfig set CAN_EMS_USB.
+  * topconfig set CAN_EMS_USB, BT_MRVL, BT_MRVL_SDIO.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 29 Dec 2009 15:32:44 +0100
 
