Fix vserver build on ia64, s390
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14831 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -9,6 +9,9 @@ linux-2.6 (2.6.32-4) UNRELEASED; urgency=low
     SCSI_BFA_FC, USB_GL860, USB_GSPCA_JEILINJ, I2C_SI4713, RADIO_SI4713,
     RADIO_SI470X, DVB_USB_FRIIO.
 
+  [ dann frazier ]
+  * Fix vserver build on ia64, s390
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 29 Dec 2009 15:32:44 +0100
 
 linux-2.6 (2.6.32-3) unstable; urgency=high
