prepare to release 2.6.33-1~experimental.5
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15623 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.33-1~experimental.5) UNRELEASED; urgency=low
+linux-2.6 (2.6.33-1~experimental.5) experimental; urgency=low
 
   [ Ian Campbell ]
   * Include Xen hypervisor in reportbug "related to" list.
@@ -19,7 +19,7 @@ linux-2.6 (2.6.33-1~experimental.5) UNRELEASED; urgency=low
     (Closes: #569034)
   * [mips*/*malta] Remove options that are present in topconfig.
 
- -- Ian Campbell <ijc@hellion.org.uk>  Sat, 27 Mar 2010 08:09:28 +0000
+ -- maximilian attems <maks@debian.org>  Wed, 05 May 2010 16:38:53 +0200
 
 linux-2.6 (2.6.33-1~experimental.4) experimental; urgency=low
 
