Note that 2.6.34 fixes #580740
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15647 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-2.6 (2.6.34~rc6-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release
+    - rtl8192su: Add IDs for several more devices (Closes: #580740)
 
   [ maximilian attems ]
   * topconfig enable IPV6_SIT_6RD, NETFILTER_XT_TARGET_CT, IP_VS_PROTO_SCTP,
