--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.34~rc6-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release
     - rtl8192su: Add IDs for several more devices (Closes: #580740)
