topconfig enable modular MACVTAP
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15697 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,7 +5,8 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * topconfig enable IPV6_SIT_6RD, NETFILTER_XT_TARGET_CT, IP_VS_PROTO_SCTP,
-    NF_CONNTRACK_ZONES, CAN_PLX_PCI, TI_DAC7512, SCSI_HPSA, PATA_TOSHIBA.
+    NF_CONNTRACK_ZONES, CAN_PLX_PCI, TI_DAC7512, SCSI_HPSA, PATA_TOSHIBA,
+    MACVTAP.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
