topconfig enable USB_NET_SMSC75XX
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15702 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,7 +7,8 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
   * topconfig enable IPV6_SIT_6RD, NETFILTER_XT_TARGET_CT, IP_VS_PROTO_SCTP,
     NF_CONNTRACK_ZONES, CAN_PLX_PCI, TI_DAC7512, SCSI_HPSA, PATA_TOSHIBA,
     MACVTAP, CHELSIO_T4, IXGBEVF, QLCNIC, LIBERTAS_MESH, RT2800PCI_RT30XX,
-    RT2800PCI_RT35XX, RT2800USB_RT30XX, RT2800USB_RT35XX, RT2800USB_UNKNOWN.
+    RT2800PCI_RT35XX, RT2800USB_RT30XX, RT2800USB_RT35XX, RT2800USB_UNKNOWN,
+    USB_NET_SMSC75XX.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
