* mips/*: remove SND_* options, as they are already enabled in topconfig.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15717 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * mips/swarm: fix boot from IDE based media (Sebastian Andrzej Siewior)
     (closes: #466977).
+  * mips/*: remove SND_* options, as they are already enabled in topconfig.
 
  -- maximilian attems <maks@debian.org>  Wed, 05 May 2010 22:57:24 +0200
 
