changelog: add kernelnewbies link
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15718 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,5 +1,7 @@
 linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
 
+  * New upstream release: http://kernelnewbies.org/Linux_2_6_34
+
   * New upstream release
     - rtl8192su: Add IDs for several more devices (Closes: #580740)
 
