topconfig enable modular DVB_NGENE
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15724 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -13,7 +13,8 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     USB_NET_SMSC75XX, USB_SIERRA_NET, VIDEO_CX18_ALSA, USB_GSPCA_BENQ,
     USB_GSPCA_CPIA1, USB_GSPCA_OV534_9, USB_GSPCA_SN9C2028, RADIO_TEF6862,
     RADIO_SAA7706H, SND_USB_UA101, CEPH_FS, MICREL_PHY, KSZ884X_PCI,
-    SENSORS_ADT7411, SENSORS_ASC7621, VIDEO_TLG2300, DVB_USB_AZ6027.
+    SENSORS_ADT7411, SENSORS_ASC7621, VIDEO_TLG2300, DVB_USB_AZ6027,
+    DVB_NGENE.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
