topconfig enable modular 2 new usb serial drivers
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15726 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,7 +15,8 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     RADIO_SAA7706H, SND_USB_UA101, CEPH_FS, MICREL_PHY, KSZ884X_PCI,
     SENSORS_ADT7411, SENSORS_ASC7621, VIDEO_TLG2300, DVB_USB_AZ6027,
     DVB_NGENE, HID_3M_PCT, LOGIG940_FF, HID_MAGICMOUSE, HID_MOSART,
-    HID_NTRIG, HID_QUANTA, HID_STANTUM, HID_WACOM.
+    HID_NTRIG, HID_QUANTA, HID_STANTUM, HID_WACOM, USB_SERIAL_QCAUX,
+    USB_SERIAL_VIVOPAY_SERIAL.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
