x86 enable modular EEEPC_WMI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15729 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     DVB_NGENE, HID_3M_PCT, LOGIG940_FF, HID_MAGICMOUSE, HID_MOSART,
     HID_NTRIG, HID_QUANTA, HID_STANTUM, HID_WACOM, USB_SERIAL_QCAUX,
     USB_SERIAL_VIVOPAY_SERIAL, MMC_RICOH_MMC, LEDS_DELL_NETBOOKS.
+  * [x86] Enable EEEPC_WMI.
   
   [ Ben Hutchings ]
   * Prepare debconf templates for translation (Closes: #576758)
