prepare to release 2.6.34-1~experimental.1
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@15754 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.34-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_2_6_34
 
@@ -30,7 +30,7 @@ linux-2.6 (2.6.34-1~experimental.1) UNRELEASED; urgency=low
     (closes: #466977).
   * mips/*: remove SND_* options, as they are already enabled in topconfig.
 
- -- maximilian attems <maks@debian.org>  Wed, 05 May 2010 22:57:24 +0200
+ -- maximilian attems <maks@debian.org>  Wed, 19 May 2010 17:06:13 +0200
 
 linux-2.6 (2.6.33-1~experimental.5) experimental; urgency=low
 
