add stable release 2.6.35.1 and 2.6.35.2
just apply fine without conflicts.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16145 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-2.6 (2.6.35-1~experimental.2) UNRELEASED; urgency=low
 
   * images: Nuke modules.devname on removal.
+  * Add stable 2.6.35.1 and 2.6.35.2.
 
  -- maximilian attems <maks@debian.org>  Tue, 04 Aug 2010 20:21:16 +0200
 
