add linus stable bugfix directly from linux-2.6
see https://bugzilla.kernel.org/show_bug.cgi?id=16588 for details.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16147 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -1,2 +1,3 @@
 + bugfix/all/stable/2.6.35.1.patch
 + bugfix/all/stable/2.6.35.2.patch
++ bugfix/all/mm-fix-page-table-unmap-for-stack-guard-page-properl.patch
