add patch for loongson-2f
Reported-by: Ben Hutchings <ben@decadent.org.uk>

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16148 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,8 @@ linux-2.6 (2.6.35-1~experimental.2) UNRELEASED; urgency=low
   * images: Nuke modules.devname on removal. (closes: #590607)
   * Add stable 2.6.35.1 and 2.6.35.2.
   * mm: fix page table unmap for stack guard page properly.
+  * config.loongson-2f: Enable USB and RTC for loongson-2f.
+    Thanks Geert Stappers <stappers@stappers.nl> (closes: #583689)
 
  -- maximilian attems <maks@debian.org>  Tue, 04 Aug 2010 20:21:16 +0200
 
