prepare to release 2.6.35-1~experimental.2
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16149 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.35-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (2.6.35-1~experimental.2) experimental; urgency=low
 
   * images: Nuke modules.devname on removal. (closes: #590607)
   * Add stable 2.6.35.1 and 2.6.35.2.
@@ -6,7 +6,7 @@ linux-2.6 (2.6.35-1~experimental.2) UNRELEASED; urgency=low
   * config.loongson-2f: Enable USB and RTC for loongson-2f.
     Thanks Geert Stappers <stappers@stappers.nl> (closes: #583689)
 
- -- maximilian attems <maks@debian.org>  Tue, 04 Aug 2010 20:21:16 +0200
+ -- maximilian attems <maks@debian.org>  Mon, 16 Aug 2010 22:31:11 +0200
 
 linux-2.6 (2.6.35-1~experimental.1) experimental; urgency=low
 
