--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,10 +3,11 @@ linux-2.6 (2.6.35-1~experimental.2) experimental; urgency=low
   * images: Nuke modules.devname on removal. (closes: #590607)
   * Add stable 2.6.35.1 and 2.6.35.2.
   * mm: fix page table unmap for stack guard page properly.
+  * mm: fix up some user-visible effects of the stack guard page.
   * config.loongson-2f: Enable USB and RTC for loongson-2f.
     Thanks Geert Stappers <stappers@stappers.nl> (closes: #583689)
 
- -- maximilian attems <maks@debian.org>  Mon, 16 Aug 2010 22:31:11 +0200
+ -- maximilian attems <maks@debian.org>  Mon, 16 Aug 2010 23:49:32 +0200
 
 linux-2.6 (2.6.35-1~experimental.1) experimental; urgency=low
 
